--- a/templates/tours.html
+++ b/templates/tours.html
@@ -1,32 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ title }}</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-</head>
-<body>
+{% extends "base.html" %}
 
-<div class="container mt-3">
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">{{ title }}</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          {% for _, city in departures.items() %}
-            <li class="nav-item active">
-              <a class="nav-link" href="#">{{ city }}</a>
-            </li>
-          {% endfor %}
-        </ul>
-      </div>
-    </nav>
-
-
-    <h1 class="display-3 mt-4">{{ tour.title }}  {{ tour.stars }} ★</h1>
+{% block content %}
 
     <!-- HERO -->
 
@@ -37,9 +11,6 @@
     <img src="https://place-hold.it/300x200" class="w-75" alt="">
     {% endif %}
     <p class="my-4 w-75">{{ tour.description }}</p>
-
     <a href="" class="btn btn-success btn-lg">Купить тур за {{ tour.price }}</a>
-</div>
 
-</body>
-</html>
+{% endblock %}
