Added margin for footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
 
 <!--  Footer-->
 
-  <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
+  <footer id="sticky-footer" class="py-4 mt-4 mb-3 bg-light text-black-100">
     <div class="container text-center">
       <small>Stepik Travel</small>
     </div>
