Added links for base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 
 <div class="container mt-3">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">{{ title }}</a>
+    <a class="navbar-brand" href="/">{{ title }}</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse"
             data-target="#navbarNav" aria-controls="navbarNav"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -20,10 +20,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        {% for _, city in departures.items() %}
-        <li class="nav-item active">
-          <a class="nav-link" href="#">{{ city }} </a>
-        </li>
+        {% for city_slug, city in departures.items() %}
+          <li class="nav-item active">
+            <a class="nav-link" href="/from/{{ city_slug }}">{{ city }}</a>
+          </li>
         {% endfor %}
       </ul>
     </div>
