Added link for index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
         <div class="card-body">
           <h5 class="card-title">{{ tour.title }}</h5>
           <p class="card-text">{{ tour.description }}</p>
-          <a href="#" class="btn btn-sm btn-primary">Подробнее</a>
+          <a href="/tours/{{ tour.id }}" class="btn btn-sm btn-primary">Подробнее</a>
         </div>
       </div>
     </div>
