Added static files

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,12 @@
   {% block content %}
 
   <!-- HERO -->
-
-  <div class="jumbotron text-center mt-4">
-    <h1 class="display-4">{{ title }}</h1>
-    <p class="lead">{{ subtitle }}</p>
-    <p class="mt-5 w-50 mx-auto">{{ description }}</p>
+  <div class="main_image jumbotron text-center mt-4">
+    <div class="main_text">
+      <h1 class="display-4">{{ title }}</h1>
+      <p class="lead">{{ subtitle }}</p>
+      <p class="mt-5 w-50 mx-auto">{{ description }}</p>
+    </div>
   </div>
 
   <!-- CARDS -->
